# SimpleStateMachine

./: CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  SECURITY.md  clang-format.cmake  readme.md
.github/workflows/: cmake.yml
doc/: CMakeLists.txt  config.doxygen  in.doxygen
lib/: CMakeLists.txt  simplestatemachine.cpp  simplestatemachine.hpp
test/: CMakeLists.txt
test/examples/: CMakeLists.txt  basic_statemachine.cpp
test/unit/: CMakeLists.txt  callbacksMock.hpp  main.cpp
